--- a/src/Module 7/Hands-on - Data Quality Assessment in Python/Ques_2.ipynb
+++ b/src/Module 7/Hands-on - Data Quality Assessment in Python/Ques_2.ipynb
@@ -30,17 +30,200 @@
    "source": [
     "# Write your code from here"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Successfully loaded swiggy.csv\n",
+      "\n",
+      "--- Objective: Assess Data Quality (Accuracy & Completeness) ---\n",
+      "\n",
+      "--- 1. Checking Accuracy ---\n",
+      "\n",
+      "--- 1.1 Verify Numerical Data Accuracy (Grade) ---\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'Grade'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/indexes/base.py:3791\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3790\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 3791\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3792\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "File \u001b[0;32mindex.pyx:152\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mindex.pyx:181\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7080\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7088\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'Grade'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 39\u001b[0m\n\u001b[1;32m     36\u001b[0m max_grade \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m100.0\u001b[39m\n\u001b[1;32m     38\u001b[0m \u001b[38;5;66;03m# Ensure 'Grade' is numeric, coercing errors to NaN\u001b[39;00m\n\u001b[0;32m---> 39\u001b[0m students_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGrade_numeric\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mto_numeric(\u001b[43mstudents_df\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mGrade\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m, errors\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcoerce\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     41\u001b[0m \u001b[38;5;66;03m# Identify grades outside the valid range or non-numeric\u001b[39;00m\n\u001b[1;32m     42\u001b[0m invalid_grades \u001b[38;5;241m=\u001b[39m students_df[\n\u001b[1;32m     43\u001b[0m     (students_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGrade_numeric\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39misna() \u001b[38;5;241m&\u001b[39m students_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGrade\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mnotnull()) \u001b[38;5;241m|\u001b[39m \u001b[38;5;66;03m# Non-numeric grades\u001b[39;00m\n\u001b[1;32m     44\u001b[0m     (students_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGrade_numeric\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m<\u001b[39m min_grade) \u001b[38;5;241m|\u001b[39m\n\u001b[1;32m     45\u001b[0m     (students_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGrade_numeric\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m>\u001b[39m max_grade)\n\u001b[1;32m     46\u001b[0m ]\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/frame.py:3893\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3891\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m   3892\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 3893\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3894\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   3895\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/indexes/base.py:3798\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3793\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[1;32m   3794\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[1;32m   3795\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[1;32m   3796\u001b[0m     ):\n\u001b[1;32m   3797\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[0;32m-> 3798\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m   3799\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[1;32m   3800\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3801\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3802\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3803\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'Grade'"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import re\n",
+    "\n",
+    "# --- Configuration ---\n",
+    "STUDENTS_DATA_PATH = 'swiggy.csv'\n",
+    "\n",
+    "# --- Utility Function to Load Data ---\n",
+    "def load_data(file_path):\n",
+    "    \"\"\"\n",
+    "    Loads a CSV file into a Pandas DataFrame.\n",
+    "    Handles FileNotFoundError gracefully.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        df = pd.read_csv(file_path)\n",
+    "        print(f\"\\nSuccessfully loaded {file_path}\")\n",
+    "        return df\n",
+    "    except FileNotFoundError:\n",
+    "        print(f\"Error: {file_path} not found. Please ensure it's in the same directory.\")\n",
+    "        return pd.DataFrame() # Return empty DataFrame on error\n",
+    "\n",
+    "# Load the student dataset for all tasks\n",
+    "students_df = load_data(STUDENTS_DATA_PATH)\n",
+    "\n",
+    "if students_df.empty:\n",
+    "    print(\"Cannot proceed with data quality checks as the dataset could not be loaded.\")\n",
+    "else:\n",
+    "    print(\"\\n--- Objective: Assess Data Quality (Accuracy & Completeness) ---\")\n",
+    "\n",
+    "    # --- 1. Check Accuracy ---\n",
+    "    print(\"\\n--- 1. Checking Accuracy ---\")\n",
+    "\n",
+    "    # --- 1.1 Verify Numerical Data Accuracy (Grade) ---\n",
+    "    print(\"\\n--- 1.1 Verify Numerical Data Accuracy (Grade) ---\")\n",
+    "    # Assuming Grade should be between 0 and 100\n",
+    "    min_grade = 0.0\n",
+    "    max_grade = 100.0\n",
+    "\n",
+    "    # Ensure 'Grade' is numeric, coercing errors to NaN\n",
+    "    students_df['Grade_numeric'] = pd.to_numeric(students_df['Grade'], errors='coerce')\n",
+    "\n",
+    "    # Identify grades outside the valid range or non-numeric\n",
+    "    invalid_grades = students_df[\n",
+    "        (students_df['Grade_numeric'].isna() & students_df['Grade'].notnull()) | # Non-numeric grades\n",
+    "        (students_df['Grade_numeric'] < min_grade) |\n",
+    "        (students_df['Grade_numeric'] > max_grade)\n",
+    "    ]\n",
+    "\n",
+    "    if not invalid_grades.empty:\n",
+    "        print(f\"Records with 'Grade' outside the valid range ({min_grade}-{max_grade}) or non-numeric:\")\n",
+    "        print(invalid_grades[['ID', 'Name', 'Grade']])\n",
+    "    else:\n",
+    "        print(\"All 'Grade' values are within the valid range and are numeric.\")\n",
+    "\n",
+    "    # --- 1.2 Validate Email Format ---\n",
+    "    print(\"\\n--- 1.2 Validate Email Format ---\")\n",
+    "    # Basic regex pattern for email validation\n",
+    "    email_regex = r\"^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}$\"\n",
+    "\n",
+    "    def validate_email_format(email):\n",
+    "        if pd.isna(email):\n",
+    "            return False # Consider missing emails as invalid format for this check\n",
+    "        return bool(re.match(email_regex, str(email)))\n",
+    "\n",
+    "    students_df['Email_format_valid'] = students_df['Email'].apply(validate_email_format)\n",
+    "    invalid_email_formats = students_df[students_df['Email_format_valid'] == False]\n",
+    "\n",
+    "    if not invalid_email_formats.empty:\n",
+    "        print(\"Records with invalid 'Email' format:\")\n",
+    "        print(invalid_email_formats[['ID', 'Name', 'Email']])\n",
+    "    else:\n",
+    "        print(\"All 'Email' addresses adhere to the specified format.\")\n",
+    "\n",
+    "    # --- 1.3 Integer Accuracy Check for Age ---\n",
+    "    print(\"\\n--- 1.3 Integer Accuracy Check for Age ---\")\n",
+    "    # Assuming Age should be an integer and within a reasonable human range (e.g., 0-120)\n",
+    "    min_age = 0\n",
+    "    max_age = 120\n",
+    "\n",
+    "    # Ensure 'Age' is numeric, coercing errors to NaN\n",
+    "    students_df['Age_numeric'] = pd.to_numeric(students_df['Age'], errors='coerce')\n",
+    "\n",
+    "    # Identify ages that are not integers, outside range, or non-numeric\n",
+    "    invalid_ages = students_df[\n",
+    "        (students_df['Age_numeric'].isna() & students_df['Age'].notnull()) | # Non-numeric ages\n",
+    "        (students_df['Age_numeric'] < min_age) | # Age below min\n",
+    "        (students_df['Age_numeric'] > max_age) | # Age above max\n",
+    "        (students_df['Age_numeric'] != students_df['Age_numeric'].astype(int)) # Not an integer\n",
+    "    ]\n",
+    "\n",
+    "    if not invalid_ages.empty:\n",
+    "        print(f\"Records with 'Age' outside logical range ({min_age}-{max_age}), non-numeric, or not an integer:\")\n",
+    "        print(invalid_ages[['ID', 'Name', 'Age']])\n",
+    "    else:\n",
+    "        print(\"All 'Age' values are within the logical range and are integers.\")\n",
+    "\n",
+    "    # --- Clean up temporary columns used for accuracy checks ---\n",
+    "    students_df.drop(columns=[col for col in students_df.columns if col.endswith(('_numeric', '_format_valid'))], inplace=True)\n",
+    "\n",
+    "\n",
+    "    # --- 2. Check Completeness ---\n",
+    "    print(\"\\n--- 2. Checking Completeness ---\")\n",
+    "\n",
+    "    # --- 2.1 Identify Missing Values (Overall) ---\n",
+    "    print(\"\\n--- 2.1 Identify Missing Values (Overall) ---\")\n",
+    "    print(\"Total null values across the dataset:\")\n",
+    "    print(students_df.isnull().sum().sum()) # Sum of all nulls in all columns\n",
+    "\n",
+    "    # --- 2.2 Rows with Missing Data ---\n",
+    "    print(\"\\n--- 2.2 Rows with Missing Data ---\")\n",
+    "    # Identify rows that have at least one missing value in any column\n",
+    "    rows_with_missing_data = students_df[students_df.isnull().any(axis=1)]\n",
+    "\n",
+    "    if not rows_with_missing_data.empty:\n",
+    "        print(\"Rows with at least one missing value:\")\n",
+    "        print(rows_with_missing_data)\n",
+    "    else:\n",
+    "        print(\"No rows found with any missing values.\")\n",
+    "\n",
+    "    # --- 2.3 Column Specific Missing Value Check ---\n",
+    "    print(\"\\n--- 2.3 Column Specific Missing Value Check ---\")\n",
+    "    print(\"Missing values per column:\")\n",
+    "    print(students_df.isnull().sum())\n",
+    "\n",
+    "    print(\"\\nPercentage of missing values per column:\")\n",
+    "    total_rows = len(students_df)\n",
+    "    if total_rows > 0:\n",
+    "        missing_percentage_per_column = (students_df.isnull().sum() / total_rows) * 100\n",
+    "        print(missing_percentage_per_column.round(2).astype(str) + '%')\n",
+    "    else:\n",
+    "        print(\"No rows in the DataFrame to calculate percentages.\")\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.12.7"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
