--- a/src/Module 7/Hands-on - Data Quality Assessment in Python/Ques_3.ipynb
+++ b/src/Module 7/Hands-on - Data Quality Assessment in Python/Ques_3.ipynb
@@ -31,17 +31,212 @@
    "source": [
     "# Write your code from here"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Successfully loaded swiggy.csv\n",
+      "\n",
+      "--- Objective: Evaluate Data Quality (Uniqueness & Validity) ---\n",
+      "\n",
+      "--- 1. Checking Uniqueness ---\n",
+      "\n",
+      "--- 1.1 Unique IDs ---\n",
+      "Is 'ID' column unique? True\n",
+      "All 'ID's are unique.\n",
+      "\n",
+      "--- 1.2 Unique Email Addresses ---\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'Email'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/indexes/base.py:3791\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3790\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 3791\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3792\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "File \u001b[0;32mindex.pyx:152\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mindex.pyx:181\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7080\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7088\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'Email'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 47\u001b[0m\n\u001b[1;32m     45\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m--- 1.2 Unique Email Addresses ---\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     46\u001b[0m \u001b[38;5;66;03m# Check uniqueness, ignoring null email addresses\u001b[39;00m\n\u001b[0;32m---> 47\u001b[0m non_null_emails \u001b[38;5;241m=\u001b[39m \u001b[43mstudents_df\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mEmail\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mdropna()\n\u001b[1;32m     48\u001b[0m is_email_unique \u001b[38;5;241m=\u001b[39m non_null_emails\u001b[38;5;241m.\u001b[39mis_unique\n\u001b[1;32m     49\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAre \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEmail\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m addresses unique (excluding nulls)? \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mis_email_unique\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/frame.py:3893\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3891\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m   3892\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 3893\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3894\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   3895\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/indexes/base.py:3798\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3793\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[1;32m   3794\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[1;32m   3795\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[1;32m   3796\u001b[0m     ):\n\u001b[1;32m   3797\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[0;32m-> 3798\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m   3799\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[1;32m   3800\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3801\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3802\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3803\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'Email'"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import re\n",
+    "\n",
+    "# --- Configuration ---\n",
+    "STUDENTS_DATA_PATH = 'swiggy.csv'\n",
+    "\n",
+    "# --- Utility Function to Load Data ---\n",
+    "def load_data(file_path):\n",
+    "    \"\"\"\n",
+    "    Loads a CSV file into a Pandas DataFrame.\n",
+    "    Handles FileNotFoundError gracefully.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        df = pd.read_csv(file_path)\n",
+    "        print(f\"\\nSuccessfully loaded {file_path}\")\n",
+    "        return df\n",
+    "    except FileNotFoundError:\n",
+    "        print(f\"Error: {file_path} not found. Please ensure it's in the same directory.\")\n",
+    "        return pd.DataFrame() # Return empty DataFrame on error\n",
+    "\n",
+    "# Load the student dataset for all tasks\n",
+    "students_df = load_data(STUDENTS_DATA_PATH)\n",
+    "\n",
+    "if students_df.empty:\n",
+    "    print(\"Cannot proceed with data quality checks as the dataset could not be loaded.\")\n",
+    "else:\n",
+    "    print(\"\\n--- Objective: Evaluate Data Quality (Uniqueness & Validity) ---\")\n",
+    "\n",
+    "    # --- 1. Check Uniqueness ---\n",
+    "    print(\"\\n--- 1. Checking Uniqueness ---\")\n",
+    "\n",
+    "    # --- 1.1 Unique IDs ---\n",
+    "    print(\"\\n--- 1.1 Unique IDs ---\")\n",
+    "    is_id_unique = students_df['ID'].is_unique\n",
+    "    print(f\"Is 'ID' column unique? {is_id_unique}\")\n",
+    "    if not is_id_unique:\n",
+    "        # Show all occurrences of duplicate IDs\n",
+    "        duplicate_ids = students_df[students_df.duplicated(subset=['ID'], keep=False)]\n",
+    "        print(\"Records with duplicate 'ID's:\")\n",
+    "        print(duplicate_ids[['ID', 'Name', 'Email']].sort_values('ID'))\n",
+    "    else:\n",
+    "        print(\"All 'ID's are unique.\")\n",
+    "\n",
+    "    # --- 1.2 Unique Email Addresses ---\n",
+    "    print(\"\\n--- 1.2 Unique Email Addresses ---\")\n",
+    "    # Check uniqueness, ignoring null email addresses\n",
+    "    non_null_emails = students_df['Email'].dropna()\n",
+    "    is_email_unique = non_null_emails.is_unique\n",
+    "    print(f\"Are 'Email' addresses unique (excluding nulls)? {is_email_unique}\")\n",
+    "    if not is_email_unique:\n",
+    "        # Show all occurrences of duplicate emails, excluding nulls\n",
+    "        duplicate_emails = students_df[students_df.duplicated(subset=['Email'], keep=False) & students_df['Email'].notnull()]\n",
+    "        print(\"Records with duplicate 'Email' addresses:\")\n",
+    "        print(duplicate_emails[['ID', 'Name', 'Email']].sort_values('Email'))\n",
+    "    else:\n",
+    "        print(\"All non-null 'Email' addresses are unique.\")\n",
+    "\n",
+    "    # --- 1.3 Unique Combination (e.g., Name and Age) ---\n",
+    "    print(\"\\n--- 1.3 Unique Combination (e.g., Name and Age) ---\")\n",
+    "    # Check uniqueness of a combination of columns, e.g., 'Name' and 'Age'\n",
+    "    # This can help identify if different people might have the same name and age, or if it's a duplicate record.\n",
+    "    is_name_age_combination_unique = students_df.duplicated(subset=['Name', 'Age']).any()\n",
+    "    print(f\"Is 'Name' and 'Age' combination unique? {not is_name_age_combination_unique}\") # Invert the boolean for clarity\n",
+    "    if is_name_age_combination_unique:\n",
+    "        # Show records where the Name and Age combination is duplicated\n",
+    "        duplicate_name_age_comb = students_df[students_df.duplicated(subset=['Name', 'Age'], keep=False)]\n",
+    "        print(\"Records with duplicate 'Name' and 'Age' combinations:\")\n",
+    "        print(duplicate_name_age_comb[['ID', 'Name', 'Age', 'Email']].sort_values(by=['Name', 'Age']))\n",
+    "    else:\n",
+    "        print(\"All 'Name' and 'Age' combinations are unique.\")\n",
+    "\n",
+    "\n",
+    "    # --- 2. Check Validity ---\n",
+    "    print(\"\\n--- 2. Checking Validity ---\")\n",
+    "\n",
+    "    # --- 2.1 Validate Age Range ---\n",
+    "    print(\"\\n--- 2.1 Validate Age Range ---\")\n",
+    "    min_age_valid = 0\n",
+    "    max_age_valid = 120\n",
+    "\n",
+    "    # Ensure 'Age' is numeric, coercing errors to NaN for validation\n",
+    "    students_df['Age_numeric_for_validation'] = pd.to_numeric(students_df['Age'], errors='coerce')\n",
+    "\n",
+    "    invalid_age_range_records = students_df[\n",
+    "        (students_df['Age_numeric_for_validation'].isna() & students_df['Age'].notnull()) | # Non-numeric\n",
+    "        (students_df['Age_numeric_for_validation'] < min_age_valid) |\n",
+    "        (students_df['Age_numeric_for_validation'] > max_age_valid)\n",
+    "    ]\n",
+    "\n",
+    "    if not invalid_age_range_records.empty:\n",
+    "        print(f\"Records with 'Age' outside the valid range ({min_age_valid}-{max_age_valid}) or non-numeric:\")\n",
+    "        print(invalid_age_range_records[['ID', 'Name', 'Age']])\n",
+    "    else:\n",
+    "        print(\"All 'Age' values are within the valid range and are numeric.\")\n",
+    "\n",
+    "    # --- 2.2 Validate Grade Scale ---\n",
+    "    print(\"\\n--- 2.2 Validate Grade Scale ---\")\n",
+    "    min_grade_valid = 0.0\n",
+    "    max_grade_valid = 100.0\n",
+    "\n",
+    "    # Ensure 'Grade' is numeric, coercing errors to NaN for validation\n",
+    "    students_df['Grade_numeric_for_validation'] = pd.to_numeric(students_df['Grade'], errors='coerce')\n",
+    "\n",
+    "    invalid_grade_scale_records = students_df[\n",
+    "        (students_df['Grade_numeric_for_validation'].isna() & students_df['Grade'].notnull()) | # Non-numeric\n",
+    "        (students_df['Grade_numeric_for_validation'] < min_grade_valid) |\n",
+    "        (students_df['Grade_numeric_for_validation'] > max_grade_valid)\n",
+    "    ]\n",
+    "\n",
+    "    if not invalid_grade_scale_records.empty:\n",
+    "        print(f\"Records with 'Grade' outside the valid scale ({min_grade_valid}-{max_grade_valid}) or non-numeric:\")\n",
+    "        print(invalid_grade_scale_records[['ID', 'Name', 'Grade']])\n",
+    "    else:\n",
+    "        print(\"All 'Grade' values are within the valid scale and are numeric.\")\n",
+    "\n",
+    "    # --- 2.3 Validate Name Format ---\n",
+    "    print(\"\\n--- 2.3 Validate Name Format ---\")\n",
+    "    # Assuming a name should only contain alphabetic characters, spaces, and hyphens (for hyphenated names)\n",
+    "    # This regex checks for one or more word characters (letters, numbers, underscore) or spaces/hyphens.\n",
+    "    # A stricter regex might be r\"^[A-Za-z\\s'-]+$\" for only letters, spaces, apostrophes, and hyphens.\n",
+    "    name_regex = r\"^[A-Za-z\\s'-]+$\"\n",
+    "\n",
+    "    def validate_name_format(name):\n",
+    "        if pd.isna(name):\n",
+    "            return False # Consider missing names as invalid format\n",
+    "        return bool(re.fullmatch(name_regex, str(name))) # fullmatch ensures the whole string matches\n",
+    "\n",
+    "    students_df['Name_format_valid'] = students_df['Name'].apply(validate_name_format)\n",
+    "    invalid_name_formats = students_df[students_df['Name_format_valid'] == False]\n",
+    "\n",
+    "    if not invalid_name_formats.empty:\n",
+    "        print(\"Records with invalid 'Name' format:\")\n",
+    "        print(invalid_name_formats[['ID', 'Name']])\n",
+    "    else:\n",
+    "        print(\"All 'Name' values adhere to the specified format.\")\n",
+    "\n",
+    "    # --- Clean up temporary columns used for validity checks ---\n",
+    "    students_df.drop(columns=[col for col in students_df.columns if col.endswith(('_numeric_for_validation', '_format_valid'))], inplace=True)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.12.7"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
