--- a/src/Module 2/Hands-on Project: EDA on a Dataset using NumPy, Pandas, Matplotlib & Seaborn/Ques_5.ipynb
+++ b/src/Module 2/Hands-on Project: EDA on a Dataset using NumPy, Pandas, Matplotlib & Seaborn/Ques_5.ipynb
@@ -19,7 +19,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original DataFrame with Missing Values:\n",
+      "Original dataframe with missing values:\n",
       "      A     B     C\n",
       "0   1.0  11.0  21.0\n",
       "1   2.0  12.0  22.0\n",
@@ -70,7 +70,7 @@
     "df = pd.DataFrame(data)\n",
     "\n",
     "# Check for missing values\n",
-    "print(\"Original DataFrame with Missing Values:\")\n",
+    "print(\"Original dataframe with missing values:\")\n",
     "print(df)\n",
     "\n",
     "print(\"\\nMissing values per column:\")\n",
