--- a/src/Module 6/Feature Scaling & Encoding Categorical Data/Ques_1.ipynb
+++ b/src/Module 6/Feature Scaling & Encoding Categorical Data/Ques_1.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
     "knn.fit(X_train_std, y_train)\n",
     "y_pred_std = knn.predict(X_test_std)\n",
     "acc_std = accuracy_score(y_test, y_pred_std)\n",
-    "print(f\"Accuracy with Standardization: {acc_std:.4f}\")\n",
+    "print(f\"Accuracy with standardization: {acc_std:.4f}\")\n",
     "\n",
     "# --- Question 4: Robust Scaling ---\n",
     "robust_scaler = RobustScaler()\n",
