--- a/src/Module 6/Feature Scaling & Encoding Categorical Data/Ques_2.ipynb
+++ b/src/Module 6/Feature Scaling & Encoding Categorical Data/Ques_2.ipynb
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
     "dt.fit(X_train, y_train)\n",
     "svm.fit(X_train, y_train)\n",
     "\n",
-    "print(\"Decision Tree accuracy (no scaling):\", accuracy_score(y_test, dt.predict(X_test)))\n",
+    "print(\"Decision tree accuracy (no scaling):\", accuracy_score(y_test, dt.predict(X_test)))\n",
     "print(\"SVM accuracy (no scaling):\", accuracy_score(y_test, svm.predict(X_test)))\n",
     "\n",
     "# With scaling (StandardScaler)\n",
