--- a/src/Module 6/Automating Data Cleaning and Best Practices in Data Preprocessing/Ques_2.ipynb
+++ b/src/Module 6/Automating Data Cleaning and Best Practices in Data Preprocessing/Ques_2.ipynb
@@ -54,11 +54,69 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Transformed Data:\n",
+      "     MedInc  HouseAge      AveRooms\n",
+      "0  2.344766       0.0  6.285345e-01\n",
+      "1  2.332238       0.0  3.270125e-01\n",
+      "2  1.782699       0.0  1.155602e+00\n",
+      "3  0.932968       0.0  3.589932e-16\n",
+      "4 -0.012881       0.0  3.589932e-16\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.datasets import fetch_california_housing\n",
+    "\n",
+    "# Step 1: Load sample dataset\n",
+    "data = fetch_california_housing(as_frame=True)\n",
+    "df = data.frame\n",
+    "\n",
+    "# Step 2: Simulate missing values\n",
+    "df.loc[0:5, 'HouseAge'] = np.nan\n",
+    "df.loc[3:8, 'AveRooms'] = np.nan\n",
+    "\n",
+    "# Step 3: Define numerical columns for transformation\n",
+    "numerical_cols = ['MedInc', 'HouseAge', 'AveRooms']\n",
+    "\n",
+    "# Step 4: Define pipeline for imputation and scaling\n",
+    "numeric_transformer = Pipeline(steps=[\n",
+    "    ('imputer', SimpleImputer(strategy='mean')),\n",
+    "    ('scaler', StandardScaler())\n",
+    "])\n",
+    "\n",
+    "# Step 5: Create column transformer\n",
+    "preprocessor = ColumnTransformer(transformers=[\n",
+    "    ('num', numeric_transformer, numerical_cols)\n",
+    "])\n",
+    "\n",
+    "# Step 6: Apply the transformation pipeline\n",
+    "df[numerical_cols] = preprocessor.fit_transform(df[numerical_cols])\n",
+    "\n",
+    "# Step 7: Verify the result\n",
+    "print(\"Transformed Data:\")\n",
+    "print(df[numerical_cols].head())\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -72,7 +130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
